Add parser for Aggregation Aware (#172)